# switch-layout

./: .gitignore  Cargo.toml  README.md  build.rs
.codex/environments/: environment.toml
src/: app.rs  lib.rs  main.rs  settings.rs  shortcuts.rs  ui.rs  window.rs
ui/: app-window.slint
ui/components/: common.slint  shortcut_row.slint
ui/dialogs/: shortcut_editor.slint
ui/pages/: about_page.slint  settings_page.slint
